--- a/composer.json
+++ b/composer.json
@@ -15,11 +15,13 @@
         "php": "^5.6 || ^7.0",
         "zendframework/zend-component-installer": "^1.0 || ^0.3 || ^1.0.0-dev@dev",
         "zendframework/zend-mvc": "^3.0.1",
-        "zfcampus/zf-development-mode": "^3.0"
+        "zfcampus/zf-development-mode": "^3.0",
+        "doctrine/doctrine-orm-module": "~1.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7",
-        "zendframework/zend-test": "^3.0"
+        "zendframework/zend-test": "^3.0",
+        "zendframework/zend-developer-tools": "^1.1"
     },
     "autoload": {
         "psr-4": {
