--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,9 @@
         "zendframework/zend-component-installer": "^1.0 || ^0.3 || ^1.0.0-dev@dev",
         "zendframework/zend-mvc": "^3.0.1",
         "zfcampus/zf-development-mode": "^3.0",
-        "doctrine/doctrine-orm-module": "~1.1"
+        "doctrine/doctrine-orm-module": "~1.1",
+        "zendframework/zend-form": "^2.9",
+        "zendframework/zend-i18n": "^2.7"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7",
