--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "zendframework/zend-component-installer": "^1.0 || ^0.3 || ^1.0.0-dev@dev",
         "zendframework/zend-mvc": "^3.0.1",
         "zfcampus/zf-development-mode": "^3.0",
-        "doctrine/doctrine-orm-module": "~1.1"
+        "doctrine/doctrine-orm-module": "~1.1",
+        "zendframework/zend-navigation": "^2.8"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7",
@@ -25,7 +26,8 @@
     },
     "autoload": {
         "psr-4": {
-            "Application\\": "module/Application/src/"
+            "Application\\": "module/Application/src/",
+            "Events\\": "module/Events/src/"
         }
     },
     "autoload-dev": {
