--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,13 @@
         "zendframework/zend-mvc": "^3.0.1",
         "zfcampus/zf-development-mode": "^3.0",
         "doctrine/doctrine-orm-module": "~1.1",
-        "zendframework/zend-navigation": "^2.8"
+        "zendframework/zend-navigation": "^2.8",
+        "kokspflanze/bjy-authorize": "1.6.*",
+        "zf-commons/zfc-user": "2.x-dev",
+        "zf-commons/zfc-user-doctrine-orm": "dev-zf3",
+        "zendframework/zend-mvc-plugin-prg": "^1.0",
+        "zendframework/zend-i18n": "^2.7",
+        "zendframework/zend-serializer": "^2.8"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7",
@@ -48,5 +54,11 @@
         ],
         "serve": "php -S 0.0.0.0:8080 -t public/ public/index.php",
         "test": "phpunit"
-    }
+    },
+    "repositories": [
+        {
+            "url": "https://github.com/mvlabs/ZfcUserDoctrineORM.git",
+            "type": "git"
+        }
+    ]
 }
